# DesktopWebviewSkeleton

./: Cargo.toml  README.md
resources/: whats-app.desktop
src/: main.rs
